[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/example_map.png" type="Texture" id=1]
[ext_resource path="res://actors/ui/MapNavigation.gd" type="Script" id=2]
[ext_resource path="res://actors/ui/LocationButton.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]

[node name="MapNavigation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 134.0
margin_top = 64.0
margin_right = -134.0
margin_bottom = -64.0

[node name="Panel" type="Panel" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 28.0
margin_top = 22.0
margin_right = -28.0
margin_bottom = -22.0
rect_clip_content = true
mouse_filter = 1
custom_styles/panel = SubResource( 1 )

[node name="Map" type="TextureRect" parent="Panel/Panel"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -367.0
margin_top = -219.0
margin_right = 268.0
margin_bottom = 284.0
mouse_filter = 0
texture = ExtResource( 1 )

[node name="LocationButton" parent="Panel/Panel/Map" instance=ExtResource( 3 )]
towards = "World"

[node name="LocationButton2" parent="Panel/Panel/Map" instance=ExtResource( 3 )]
margin_left = 460.0
margin_top = 292.0
margin_right = 503.0
margin_bottom = 313.0
text = "World2"
towards = "World2"

[node name="LocationButton3" parent="Panel/Panel/Map" instance=ExtResource( 3 )]
margin_left = 517.0
margin_top = 591.0
margin_right = 567.0
margin_bottom = 612.0
text = "World3"
towards = "World3"

[node name="Close" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -117.0
margin_top = 63.0
margin_right = -77.0
margin_bottom = 84.0
text = "Close"

[connection signal="gui_input" from="." to="." method="_on_MapNavigation_gui_input"]
[connection signal="gui_input" from="Panel/Panel/Map" to="." method="_on_Map_gui_input"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
